<resources>
    <string name="app_name">SAL</string>
    <string name="title_activity_user_login">user_login</string>
    <string name="back">الى الخلف</string>
    <string name="home_txt_1"> قاموس لتعليم لغة الاشارة بصور وفيديوهات</string>
    <string name="home_txt_2"> أحفظ أشاراتك الخاصة وعدلها متى شئت </string>
    <string name="home_txt_3"> التحديث  الدورى لاحدث الاشارات </string>


    <string name="send">أرسال </string>
    <string name="right_ans_number">عدد الاجابات الصحيحه </string>
    <string name="welcome">مرحبا </string>
    <string name="login">دخول </string>
    <string name="worng_ans_number">عدد الاجابات الخطأ</string>

    <string name="Next">التالى </string>

    <string name="video"> فيديو </string>
    <string name="image">صورة</string>
    <string name="home"> الرائيسيه </string>


    <string name="user_reg">حساب جديد </string>
    <string name="sign_categories">تصنيفات الاشارات  </string>
    <string name="books_categories"> تصنيفات الكتب </string>
    <string name="quiz_categories"> تصنيفات الاختبارات  </string>


    <string name="newsign_name">الاسم:</string>
    <string name="newsign_cat">التصنيف:</string>
    <string name="newsign_desc">الوصف:</string>
    <string name="newsign_title">اشارة جديدة</string>
    <string name="newsign_button1"></string>
    <string name="newsign_button2"></string>
    <string name="newsign_button3"></string>

    <string name="newcat_title">تصنيف جديد</string>

    <string name="sign">أشارة</string>

    <string name="signs">الاشارات </string>

    <string name="msg_errorlogin">عفوا البريد أو كلمة السر خطا  </string>



    <string name="title_activity_item_tabs">item_tabs</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="email">البريد الالكترونى</string>
    <string name="password">كلمة السر</string>
    <string name="about_title">عن البرنامج</string>
    <string name="about">نبذة عن البرنامج</string>
    <string name="new_user">مستخدم جديد</string>
    <string name="name">الاسم</string>
    <string name="repassword">أعادة كلمة السر</string>
    <string name="new_user_password_not_msg">عفوا ولكن كلمة السر  وإعداة كلمة السر غير متطابقه</string>
    <string name="new_user_empty_msg">عفو! ولكن هناك حقل مطلب فارغ</string>
    <string name="desc">Image button</string>


    <string name="addquiz_title">اضف اختبار</string>
    <string name="addquiz_q">السؤال</string>

    <string name="addquiz_a">أجابه</string>

    <string name="addquiz_a1">الاجابة 1</string>
    <string name="addquiz_a2">الاجابة 2</string>
    <string name="addquiz_a3">الاجابة 3</string>
    <string name="addquiz_a4">الاجابة 4</string>

    <string name="add_book">أضافه كتاب</string>

    <string name="panel_sign">اضف اشارة</string>
    <string name="panel_cat">اضف تصنيف</string>
    <string name="panel_quiz">اضف اختبار</string>

    <string name="newcat_desc">الوصف</string>
    <string name="newcat_name">الاسم</string>
    <string name="users">الاعضاء</string>
    <string name="add_user">أضافة  عضو</string>
    <string name="ChoosefromGallery">أختر من المعرض</string>
    <string name="cancel">ألغاء</string>
    <string name="AddPhoto">أضافه صورة</string>
    <string name="books">الكتب</string>
    <string name="for_users">للاعضاء</string>
    <string name="for_books">للكتب</string>
    <string name="for_quizs">للاختبارات</string>
    <string name="for_sins">للاشارات</string>
    <string name="answer">الاجابه</string>
    <string name="question">السوال</string>
    <string name="ch_category">أختر تصنيف</string>
    <string name="ch_question">أختر سؤال</string>
    <string name="update">تحديث البيانات</string>
    <string name="name_1">الاسم الاول</string>
    <string name="name_2">الاسم الثانى</string>
    <string name="app_title">تعليم اللغه العربيه لذوى الاعاقة السمعيه‎</string>


</resources>
