<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pcland15.ismail.sal.addquiz">

    <RelativeLayout
        style="@style/navbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp">

        <ImageButton
            android:id="@+id/button4"
            style="@style/navbar_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goBack"

            android:text="@string/back" />


        <ImageButton
            android:id="@+id/button5"
            style="@style/navbar_send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:onClick="userRegSend"

            android:text="@string/send" />

        <TextView
            android:id="@+id/textView2"
            style="@style/navbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addquiz_title"
            android:textAppearance="?android:attr/textAppearanceLarge"

            />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/insert_bts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/navbar"
        android:layout_marginTop="30dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/addquiz_q"
            style="@style/form_input_text"
            android:hint="@string/addquiz_q" />


        <EditText
            android:id="@+id/addquiz_a1"
            style="@style/form_input_text"
            android:hint="@string/addquiz_a1" />


        <EditText
            android:id="@+id/addquiz_a2"
            style="@style/form_input_text"
            android:hint="@string/addquiz_a2" />

        <EditText
            android:id="@+id/addquiz_a3"
            style="@style/form_input_text"
            android:hint="@string/addquiz_a3" />

        <EditText
            android:id="@+id/addquiz_a4"
            style="@style/form_input_text"
            android:hint="@string/addquiz_a4" />


        <ImageButton
            android:id="@+id/imageButton"
            style="@style/image_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="3dp"
            android:contentDescription="@string/desc"
            android:text="@string/newsign_button1" />

        <Button
            android:id="@+id/imageButton4"
            style="@style/button"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_column="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/desc"
            android:text="@string/send" />

    </LinearLayout>


</RelativeLayout>
