<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pcland15.ismail.sal.panel">


    <RelativeLayout
        android:id="@+id/navbar33333"

        style="@style/navbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp">

        <ImageButton
            android:id="@+id/button4"
            style="@style/navbar_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goback"
            android:text="@string/back" />

        <ImageButton
            android:id="@+id/button5"
            style="@style/navbar_send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:onClick="userRegSend"

            android:text="@string/send" />

        <TextView
            android:id="@+id/textView2"
            style="@style/navbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newcat_title"
            android:textAppearance="?android:attr/textAppearanceLarge"

            />
    </RelativeLayout>

    <LinearLayout
        style="@style/main_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/navbar"
        android:layout_marginTop="50dp">


        <Button
            style="@style/button"
            android:hint="@string/panel_sign"
            android:id="@+id/button9"
            android:layout_gravity="center_horizontal" />

        <Button
            style="@style/button"
            android:hint="@string/panel_cat"
            android:id="@+id/button10"
            android:layout_gravity="center_horizontal" />

        <Button
            style="@style/button"
            android:hint="@string/panel_quiz"
            android:id="@+id/button11"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</RelativeLayout>
