<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pcland15.ismail.sal.addcategory">

    <RelativeLayout
        style="@style/navbar"

        android:id="@+id/navbar33333"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp">

        <ImageButton
            android:id="@+id/button4"
            style="@style/navbar_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goback"
            android:text="@string/back" />

        <ImageButton
            android:id="@+id/button5"
            style="@style/navbar_send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:onClick="userRegSend"

            android:text="@string/send" />

        <TextView
            android:id="@+id/textView2"
            style="@style/navbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newcat_title"
            android:textAppearance="?android:attr/textAppearanceLarge"

            />
    </RelativeLayout>


    <RelativeLayout

        style="@style/main_data"
        android:layout_below="@+id/navbar33333"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/insert_bts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">


            <EditText
                android:id="@+id/newsign_name_input"
                style="@style/form_input_text"
                android:hint="@string/newsign_name"
               />



            <EditText
                android:id="@+id/newsign_desc_input"
                style="@style/textarea"
                android:hint="@string/newsign_name"
                />




            <ImageButton
                android:id="@+id/imageButton"
                style="@style/image_button"
                android:text="@string/newsign_button1" />



            <Button
                android:id="@+id/sned"
                style="@style/button"
                android:text="@string/send" />




        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>
