<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.pcland15.ismail.sal.aboutapp">



    <RelativeLayout
        android:id="@+id/topbar"
        style="@style/navbar"
        android:layout_width="match_parent">

        <Button
            android:id="@+id/button4"
            style="@style/navbar_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goBack"

            android:text="@string/back" />

        <TextView
            android:id="@+id/textView2"
            style="@style/navbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textAppearance="?android:attr/textAppearanceLarge"

            />
    </RelativeLayout>

    <TextView
style="@style/textarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name_1"
        android:id="@+id/textView5"
        android:layout_below="@+id/topbar"
        android:layout_centerHorizontal="true" />

    <TextView
        style="@style/textarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name_2"

        android:id="@+id/textView7"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
