<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.pcland15.ismail.sal.newquiz">


    <RelativeLayout
        style="@style/navbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp">

        <ImageButton
            android:id="@+id/button4"
            style="@style/navbar_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:onClick="goback"/>

        <ImageButton
            android:id="@+id/button5"
            style="@style/navbar_send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:onClick="userRegSend"

            android:text="@string/send" />

        <TextView
            android:id="@+id/textView2"
            style="@style/navbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newcat_title"
            android:textAppearance="?android:attr/textAppearanceLarge"

            />
    </RelativeLayout>



    <RelativeLayout

        style="@style/main_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent">




        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:stretchColumns="0"
            android:layout_below="@+id/insert_bts"
            android:id="@+id/from">

            <TableRow

                style="@style/form_table_row"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                >

                <EditText
                    android:id="@+id/newsign_name_input"
                    style="@style/form_input_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0" />

                <TextView
                    android:id="@+id/newsign_name"
                    style="@style/form_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"

                    android:text="@string/newsign_name"

                    />


            </TableRow>

            <TableRow
                style="@style/form_table_row"
                android:layout_width="match_parent"
                android:layout_height="match_parent"


                >

                <EditText
                    android:id="@+id/newsign_category_input"
                    style="@style/form_input_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0" />

                <TextView
                    android:id="@+id/newsign_category"
                    style="@style/form_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"

                    android:text="@string/newsign_cat"

                    />


            </TableRow>

            <TableRow
                style="@style/form_table_row"
                android:layout_width="match_parent"

                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/newsign_desc_input"
                    style="@style/form_input_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:layout_column="0" />

                <TextView
                    android:id="@+id/newsign_desc"
                    style="@style/form_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"

                    android:text="@string/newsign_desc"

                    />


            </TableRow>


        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:id="@+id/insert_bts">

            <Button
                android:id="@+id/imageButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_column="0"
                android:contentDescription="@string/desc"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/newsign_button1"
                style="@style/button"
                />


        </LinearLayout>

        <Button
            android:id="@+id/imageButton4"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_column="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/desc"
            style="@style/button"
            android:layout_below="@id/from"
            android:text="@string/newsign_button3"
            />

    </RelativeLayout>


</RelativeLayout>
