<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pcland15.ismail.sal.new_user">


    <RelativeLayout
        android:id="@+id/navbar"
        style="@style/navbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp">

        <Button
            android:id="@+id/button4"
            style="@style/navbar_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goBack"
            android:text="@string/back" />


        <TextView
            android:id="@+id/home_title"
            style="@style/navbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:textAppearance="?android:attr/textAppearanceLarge"

            />


    </RelativeLayout>

    <RelativeLayout
        style="@style/main_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/navbar"

        >

        <LinearLayout
            android:id="@+id/imagearea"

            style="@style/textarea"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:orientation="vertical">


            <ImageButton
                android:id="@+id/imageButton"
                style="@style/image_button"
                android:layout_width="match_parent"
                android:onClick="select_image" />

            <ImageView
                android:id="@+id/new_userButtonImageView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitCenter" />
        </LinearLayout>

        <LinearLayout
            android:layout_below="@+id/imagearea"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">



            <LinearLayout
                style="@style/textarea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/new_uesr_name"
                    style="@style/form_input_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:ems="10"

                    android:hint="@string/name"
                    android:inputType="textPersonName" />

                <Spinner
                    android:id="@+id/newuser_sp_cat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal" />

                <EditText
                    android:id="@+id/new_uesr_email"
                    style="@style/form_input_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"

                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/new_uesr_password"
                    style="@style/form_input_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword" />


                <EditText
                    android:id="@+id/new_uesr_repassword"
                    style="@style/form_input_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/repassword"
                    android:inputType="textPassword"

                    />
            </LinearLayout>

            <Button
                android:id="@+id/button8"
                style="@style/button"
                android:onClick="naw_userRegSend"

                android:text="@string/send" />
        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>
