<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pcland15.ismail.sal.newsign">

    <RelativeLayout
        style="@style/navbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp">

        <ImageButton
            android:id="@+id/button4"
            style="@style/navbar_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back" />

        <ImageButton
            android:id="@+id/button5"
            style="@style/navbar_send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:onClick="userRegSend"

            android:text="@string/send" />

        <TextView
            android:id="@+id/textView2"
            style="@style/navbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_reg"
            android:textAppearance="?android:attr/textAppearanceLarge"

            />
    </RelativeLayout>


    <RelativeLayout

        style="@style/main_data"

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                />
        </RelativeLayout>


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="0">

            <TableRow

                style="@style/form_table_row"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                >

                <EditText
                    android:id="@+id/newsign_name_input"
                    style="@style/form_input_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0" />

                <TextView
                    android:id="@+id/newsign_name"
                    style="@style/form_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"

                    android:text="@string/newsign_name"

                    />


            </TableRow>

            <TableRow
                style="@style/form_table_row"
                android:layout_width="match_parent"

                android:layout_height="match_parent"


                >

                <EditText
                    android:id="@+id/newsign_category_input"
                    style="@style/form_input_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0" />

                <TextView
                    android:id="@+id/newsign_category"
                    style="@style/form_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"

                    android:text="@string/newsign_cat"

                    />


            </TableRow>

            <TableRow
                style="@style/form_table_row"
                android:layout_width="match_parent"

                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/newsign_desc_input"
                    style="@style/form_input_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:layout_column="0" />

                <TextView
                    android:id="@+id/newsign_desc"
                    style="@style/form_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"

                    android:text="@string/newsign_desc"

                    />


            </TableRow>


        </TableLayout>
    </RelativeLayout>

</RelativeLayout>
